[project]
name = "pythonproject13"
version = "0.1.0"
description = ""
authors = [
    {name = "fantasticlion",email = "den20020805@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.flake8]
max-line-length = 120
ignore = "E203, W503"